<resources>
    <string name="app_name">空压机e助手</string>
    <string name="action_settings">Settings</string>
    <string name="phone">请输入注册手机号码</string>
    <string name="password">请输入密码</string>
    <string name="password_hit">请再次输入密码</string>
    <string name="login_code">请输入验证码</string>
    <string name="phoneCode">手机号</string>
    <string name="passwordCode">密码</string>
    <string name="login_submit">登录</string>
    <string name="findPassword">找回密码</string>
    <string name="remember">下次免登录</string>
    <string name="rePassword">确认密码</string>
    <string name="code">验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="inputCode">输入验证码</string>
    <string name="reset_pwd_btn">重设密码</string>
    <string name="new_pwd">新密码</string>
    <string name="tishi">提示</string>
    <string name="sign_out">确认退出吗?</string>
    <string name="sure">确定</string>
    <string name="btnReturn">返回</string>
    <string name="submit_tijiaoxiugai">提交信息</string>
    <string name="quxiaoguanzhu">确认取消关注吗？</string>
    <string name="sbzc">设备注册</string>
    <string name="sbyj">设备预警</string>
    <string name="sbbj">设备报警</string>
    <string name="sblb">设备列表</string>
    <string name="wbxx">维保信息</string>
    <string name="wxyj">维保预警</string>
    <string name="jnzj">节能专家</string>
    <string name="sbgz">设备改造</string>
    <string name="loading">加载中</string>
    <string name="check_true">签到成功</string>
    <string name="check_check">您已签到，请勿重复签到</string>
    <string name="not_network">没有连接网络！</string>
    <string name="callPhone">拨打客服热线</string>
    <string name="kyjsc">空压商城</string>
    <string name="kyjw">空压机网</string>
    <string name="ysjw">压缩机网</string>
    <string name="jnzx">节能之星</string>
    <string name="service_phone">400-006-5363</string>
    <string name="shoucang_list">收藏列表</string>
    <string name="baidu_map">地图</string>
    <string name="geren">个人</string>
    <string name="wanshan">完善设备信息</string>
    <string name="air_temp_tu1">排气温度1</string>
    <string name="air_temp_tu2">排气温度2</string>
    <string name="dianji_wendu">电机温度</string>
    <string name="huanjing_wendu">环境温度</string>
    <string name="kongqi_yali">空气压力</string>
    <string name="shuoming">备注：压力单位MPa,温度为℃</string>
    <string name="invalid_phone_num">手机号码格式错误!</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="reset_pwd">找回密码</string>
    <string name="member_register_network">网络错误</string>
    <string name="login_failure">用户登录失败！</string>
    <string name="hint_phone_for_reset_password">请输入手机号</string>
    <string name="hint_code_for_reset_password">请输入验证码</string>
    <string name="hint_pwd_for_reset_password">请输入新密码</string>
    <string name="hint_old_pwd_not">旧密码不能为空</string>
    <string name="hint_old_pwd_error">新密码输入错误</string>
    <string name="hint_new_pwd_for_reset_password">请重复新密码</string>
    <string name="hint_pwd_not_match">两次密码输入不一致</string>
    <string name="hint_pwd_too_short">密码至少六位</string>
    <string name="member_register_success">用户注册成功！</string>
    <string name="member_register_failure">用户注册失败！</string>
    <string name="change_pwd_success">密码修改成功！</string>
    <string name="change_pwd_failure">密码修改失败！</string>
    <string name="member_reset_success">密码重置成功！</string>
    <string name="member_reset_failure">密码重置失败！</string>
    <string name="settings_sign_out">退出登录</string>
    <string name="member_edit_success">编辑成功</string>
    <string name="member_detail_failure">编辑失败</string>
    <string name="user_detail">用户详情</string>
    <string name="erweima">我的二维码</string>
    <string name="setting">设置</string>
    <string name="my_kefu">我的客服</string>
    <string name="about_us">关于</string>
    <string name="sms_captcha_success">短信发送成功！</string>
    <string name="sms_captcha_failure">短信发送失败！</string>
    <string name="device_register">请在此处注册您的Mg2C空压机智能驱动一体机</string>
    <string name="start">开始扫描</string>
    <string name="customer_phone">客服电话：400-006-5363</string>
    <string name="device">设备注册</string>
    <string name="member_detail">用户详情</string>
    <string name="member_edit">编辑用户</string>
    <string name="member_beizhu">注：手机号和积分不能修改</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="device_register_success">设备注册成功！</string>
    <string name="device_register_failure">设备注册失败！</string>
    <string name="kyjcs">品牌：</string>
    <string name="ytj">功率：</string>
    <string name="jqxlh">序列号：</string>
    <string name="khmc">客户名称：</string>
    <string name="khdz">客户地址：</string>
    <string name="jjlxdh">紧急电话：</string>
    <string name="rcwhdh">维护电话：</string>
    <string name="zhuce">注册</string>
    <string name="submit_info">提交设备信息</string>
    <string name="qsrjjlxdh">请输入紧急联系电话</string>
    <string name="qsrrcwhdh">请输入日常维护电话</string>
    <string name="rl">容量</string>
    <string name="bh">空压机编号：</string>
    <string name="ccrq">空压机出厂日期：</string>
    <string name="pp">空压机品牌：</string>
    <string name="qsrrl">请输入容量</string>
    <string name="qsrbh">请输入编号</string>
    <string name="qsrccrq">请选择出厂日期</string>
    <string name="qsrpp">请输入机器品牌</string>
    <string name="khmc_hit">请填写</string>
    <string name="edit_device_info">修改设备信息</string>
    <string name="wanshan_info">是否完善设备信息</string>
    <string name="jieneng">节能</string>
    <string name="shouyi">收益</string>
    <string name="yali">压力：</string>
    <string name="wendu">温度：</string>
    <string name="yunxing">运行</string>
    <string name="stop">停止</string>
    <string name="yjxcbyrq">下次保养：</string>
    <string name="device_list">设备列表</string>
    <string name="customer">客户</string>
    <string name="device_number">设备号</string>
    <string name="area">地区</string>
    <string name="search">搜索</string>
    <string name="search_hit">请输入设备号</string>
    <string name="search_area">请输入地区</string>
    <string name="search_cust">请输入客户</string>
    <string name="device_detial">设备详情</string>
    <string name="yjxq">预警详情</string>
    <string name="bjxq">报警详情</string>
    <string name="wbxq">维保详情</string>
    <string name="device_success">列表获取成功</string>
    <string name="device_failure">列表获取失败</string>
    <string name="energy_success">信息获取成功</string>
    <string name="energy_failure">信息获取失败</string>
    <string name="co_name">客户名称：</string>
    <string name="jq_status">设备状态：</string>
    <string name="jiqi_sn">设备条码：</string>
    <string name="kyjbh">空压机编号：</string>
    <string name="yujing_list">预警列表</string>
    <string name="baojing_list">报警列表</string>
    <string name="yujing_status">预警状态：</string>
    <string name="baojing_status">报警状态：</string>
    <string name="weibao_list">维保列表</string>
    <string name="weixiu_list">维保预警列表</string>
    <string name="weibao_status">维保状态</string>
    <string name="weixiu_status">维修状态</string>
    <string name="change_pwd">修改密码</string>
    <string name="shishi">实时</string>
    <string name="ri">日</string>
    <string name="zhou">周</string>
    <string name="yue">月</string>
    <string name="bannian">半年</string>
    <string name="nian">年</string>
    <string name="ybkhmc">客户名称</string>
    <string name="ybkhdz">客户地址</string>
    <string name="ybkyjpp">空压机品牌</string>
    <string name="ybkyjbh">空压机编号</string>
    <string name="ybjjdh">紧急电话</string>
    <string name="ybwhdh">维护电话</string>
    <string name="pqwdqx">排气压力曲线(MPa)</string>
    <string name="djwdqx">电机电流曲线(A)</string>
    <string name="hjwdqx">电机温度曲线(℃)</string>
    <string name="kqwdqx">排气温度曲线(℃)</string>
    <string name="hint_login_pwd_old">请输入旧密码</string>
    <string name="hint_login_pwd_new">请输入新密码</string>
    <string name="hint_login_pwd_new_confirm">请重复新密码</string>
    <string name="air_press">空气压力</string>
    <string name="press">压力</string>
    <string name="temp">温度</string>
    <string name="air_temp1">排气温度</string>
    <string name="dianji_temp">电机温度</string>
    <string name="modle_temp">模块温度</string>
    <string name="envi_temp">环境温度</string>
    <string name="current_dy">设备电压</string>
    <string name="zhuji_dl1">主机电流 A</string>
    <string name="zhuji_dl2">主机电流 B</string>
    <string name="zhuji_dl3">主机电流 C</string>
    <string name="fengji_dl1">风机电流 A</string>
    <string name="fengji_dl2">风机电流 B</string>
    <string name="fengji_dl3">风机电流 C</string>
    <string name="fengjiavgdl">风机平均电流 A</string>
    <string name="fengjiavgdl1">风机平均电流 B</string>
    <string name="data_time">机器时钟采集实时时间</string>
    <string name="sbgz_btn">设备改造</string>
    <string name="djzt">电机状态</string>
    <string name="kyjzt">空压机状态</string>
    <string name="fj1zt">风机1#状态</string>
    <string name="fj2zt">风机2#状态</string>
    <string name="pqyl">排气压力</string>
    <string name="jtwd">排气温度</string>
    <string name="zjdl">主机电流</string>
    <string name="djwd">电机温度</string>
    <string name="dqwd">电气温度</string>
    <string name="pl">频率</string>
    <string name="jndn">节能电能</string>
    <string name="sjhn">实际耗能</string>
    <string name="sbyx">设备运行</string>
    <string name="txzk">通讯状况</string>
    <string name="fj1dl">风机1#电流</string>
    <string name="fj2dl">风机2#电流</string>
    <string name="sbdy">设备电压</string>
    <string name="jzcs">加载次数</string>
    <string name="yxsj">累积运行时间</string>
    <string name="jzsj">累积加载时间</string>
    <string name="bcyx">本次运行时间</string>
    <string name="bcjz">本次加载时间</string>
    <string name="cpbb">产品版本</string>
    <string name="snh">SN号</string>
    <string name="kyjpp">空压机品牌</string>
    <string name="gzyl">工作压力</string>
    <string name="ylsj">油滤时间</string>
    <string name="yfsj">油封时间</string>
    <string name="klsj">空滤时间</string>
    <string name="rysj">润油时间</string>
    <string name="yzsj">油脂时间</string>
    <string name="pdsj">皮带时间</string>
    <string name="ylwbcs">油滤维保次数</string>
    <string name="yfwbcs">油封维保次数</string>
    <string name="klwbcs">空滤维保次数</string>
    <string name="rywbcs">润油维保次数</string>
    <string name="yzwbcs">油脂维保次数</string>
    <string name="pdwbcs">皮带维保次数</string>
    <string name="ljyxsj">累计运行时间</string>
    <string name="ljjzsj">累计加载时间</string>
    <string name="bcyxsj">本次运行时间</string>
    <string name="bcjzsj">本次加载时间</string>
    <string name="sjcjsj">数据采集时间</string>
    <string name="jnl_text">节能率</string>
    <string name="sbgl">设备功率</string>
    <string name="dypl">电源频率</string>
    <string name="mtpjyxsj">每天平均运行时间</string>
    <string name="khmc_text">客户名称</string>
    <string name="kyjbh_text">空压机编号</string>
    <string name="zjrjbb">主机软件版本</string>
    <string name="zjyjbb">主机硬件版本</string>
    <string name="jieneng_zhixing">节能之星</string>
    <string name="jieneng_zhuanjia">节能专家</string>
    <string name="jnzx_zrjn">昨日节能（KW）</string>
    <string name="jnzx_zjn">总实际耗能（KW）</string>
    <string name="zsjyd">总实际用电（元）</string>
    <string name="jnl">节能率（%）</string>
    <string name="syl">收益率（%）</string>
    <string name="ljjn">累计节能（KW）</string>
    <string name="ljsy">累计收益（元）</string>
    <string name="week_jn">节能率曲线（%）</string>
    <string name="kwh">kWh</string>
    <string name="yuan">元</string>
    <string name="shoucang">关注</string>
    <string name="not_shoucang">取消</string>
    <string name="changePwd">修改密码</string>
    <string name="member_phone">手机号</string>
    <string name="member_name">姓名</string>
    <string name="member_cname">昵称</string>
    <string name="member_mail">邮箱</string>
    <string name="member_score">积分</string>
    <string name="member_add">地址</string>
    <string name="wenben">扫描二维码，您的好友也可以安装空压机e助手！</string>
    <string name="guanyuwomen">关于我们：</string>
    <string name="guanfang">官方微信</string>
    <string name="weixin">空压机e助手微信</string>
    <string name="myerweima">我的二维码</string>
    <string name="xcdz">现场地址</string>
    <string name="kyjsbxx">空压机设备改造信息</string>
    <string name="pqwdcgq">排气温度传感器</string>
    <string name="jzf">加载阀</string>
    <string name="yf">油阀</string>
    <string name="djdhlw">电机吊环螺纹</string>
    <string name="ylcgq">压力传感器</string>
    <string name="azpcc">安装盘尺寸</string>
    <string name="xsqazcc">显示器安装尺寸</string>
    <string name="djxxj">电机线线经</string>
</resources>