<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blue"
        android:orientation="horizontal">

        <TextView
            style="@style/text_main_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/geren"
            />


    </LinearLayout>


    <Button
        android:id="@+id/my_user"
        style="@style/btn_white_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="10dp"
        android:gravity="center|left"
        android:drawableLeft="@drawable/user_detail"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/icon_right_arrow"
        android:text="@string/user_detail" />

    <Button
        android:id="@+id/my_erweima"
        style="@style/btn_white_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/erweima"
        android:drawablePadding="5dp"
        android:gravity="center|left"
        android:drawableRight="@drawable/icon_right_arrow"
        android:text="@string/erweima" />


    <RelativeLayout
        android:id="@+id/layout_service_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_service_phone"
            style="@style/btn_white_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/kefu"
            android:gravity="center|left"
            android:text="@string/my_kefu" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_service_phone"
            android:layout_alignBottom="@+id/btn_service_phone"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/service_phone"
            android:textColor="@color/blue" />
    </RelativeLayout>

    <Button
        android:id="@+id/about_us"
        style="@style/btn_white_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/icon_right_arrow"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/about"
        android:gravity="center|left"
        android:layout_marginTop="1dp"
        android:text="@string/about_us" />

    <Button
        android:id="@+id/changePwd"
        style="@style/btn_white_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/change_pwd"
        android:drawablePadding="5dp"
        android:gravity="center|left"
        android:drawableRight="@drawable/icon_right_arrow"
        android:text="@string/changePwd" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/settings_sign_out"
            style="@style/btn_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/settings_sign_out" />
    </RelativeLayout>

</LinearLayout>